--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -177,7 +177,7 @@ nav li a {
     padding: 30px;
 }
 
-.language-title { 
+.language-title {
     color: rgb(24, 24, 24);
     font-size: 20px;
     font-weight: 700;
@@ -227,7 +227,52 @@ nav li a {
     margin-bottom: 30px;
 }
 
-.btn-resume{
+.btn-resume {
     text-align: center;
     margin-top: 60px;
+}
+
+/* footer style */
+
+footer {
+    background: rgb(255, 248, 243);
+}
+
+.footer-section {
+    display: flex;
+    gap: 100px;
+    width: 1140px;
+    margin: auto;
+    margin-top: 100px;
+    padding: 130px 0px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+.footer-title {
+    color: rgb(24, 24, 24);
+    font-size: 35px;
+    font-weight: 700;
+    line-height: 48px;
+    /* text-align: center; */
+}
+
+.footer-description {
+    color: rgb(71, 71, 71);
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.contact input[type="text"],
+.contact input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 30px;
+    border-radius: 5px;
+    background: rgb(255, 255, 255);
+    width: 100%;
+    border: 0;
 }
