change position for footer icons

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -265,6 +265,11 @@ footer {
     line-height: 28px;
 }
 
+.icon-container img{
+    margin-right: 20px;
+
+}
+
 .contact input[type="text"],
 .contact input[type="email"],
 textarea {
